--- a/src/elements/TextElement/TextElement.css
+++ b/src/elements/TextElement/TextElement.css
@@ -4,8 +4,8 @@
   font-family: "title";
   font-size: 20px;
   font-weight: bold;
-  height: var(--pageOffset);
-  line-height: calc(var(--pageOffset) + 6px);
+  height: var(--pageYOffset);
+  line-height: calc(var(--pageYOffset) + 6px);
   text-transform: uppercase;
 }
 
