--- a/src/index.css
+++ b/src/index.css
@@ -49,9 +49,15 @@ body {
   --pageXOffset: 6px;
   --pageYOffset: 30px;
 
+  --buttonHeight: 16px;
+
   background: var(--black000);
   color: var(--gray010);
   height: 100%;
   margin: 0;
   overflow: hidden;
+}
+
+[slot="content"] {
+  display: none;
 }
