--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,20 @@
   src: url("./fonts/body-italic.woff") format("woff");
 }
 
+@font-face {
+  font-family: "executable";
+  src: url("./fonts/executable.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "clacon";
+  src: url("./fonts/clacon.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 html {
   height: 100%;
 }
